--- a/aftman.toml
+++ b/aftman.toml
@@ -4,5 +4,5 @@
 # To add a new tool, add an entry to this table.
 [tools]
 rojo = "rojo-rbx/rojo@7.3.0"
-remodel = "rojo-rbx/remodel@0.11.0"
 darklua = "seaofvoices/darklua@0.9.0"
+lune = "filiptibell/lune@0.7.6"
